--- a/main.html
+++ b/main.html
@@ -1,67 +1,8 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-    
-    body { margin: -2px; }
-
-    h1 {text-align: center;}
-    h2 {text-align: center;}
-    h3 {text-align: center;}
-    p {text-align: center;}
-
-    .myDiv {
-        background-color:lightcyan;
-        margin: -8px;
-        padding: 20px;
-    }
-
-    footer {
-        font-size: small;
-        font-family: Josefin Slab;
-    }
-
-    .sidebar {
-        height: 100%;
-        width: 250px;
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        background-color: #111;
-        overflow-x: hidden;
-        padding-top: 20px;
-    }
-
-    .sidebar a {
-        padding: 8px 8px 6px;
-        text-align: center;
-        text-decoration: none;
-        font-size: 28px;
-        color: #818181;
-        display: block;
-        font-family: Glory;
-    }
-
-    .sidebar a:hover {
-        color: #f1f1f1;
-    }
-
-    .main {
-        margin-left: 250px; /* Same as the width of the sidebar */
-        font-size: 28px; /* Increased text to enable scrolling */
-        padding: 0px 10px;
-    }
-
-    @media screen and (max-height: 450px) {
-    .sidebar {padding-top: 15px;}
-    .sidebar a {font-size: 18px;}
-    }
-</style>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 
 <body>
 
@@ -69,27 +10,53 @@
     <p style="text-align: center; font-size: 45px; color:darkorange; font-family: Ruthie;">Simone Laudani</p>
     <a style="font-size: 38px;" href="#">Home</a>
     <a href="#2020-21">Anno 2020-21</a>
-    <a href="#2021-22">Anno 2021-22</a>
-    <a href="#2022-23">Anno 2022-23</a>
+    <a href="#work-in-progress">Anno 2021-22</a>
+    <a href="#work-in-progress">Anno 2022-23</a>
 </div>
 
 <div class="main">
-<h1 style="background-image: url('placeholder.png'); margin: -8px; padding: 150px;">Cittadinanza e costituzione</h1>
+
+<div class="bg-img"></div>
+
+<h1 style="color: aliceblue; font-family: Roboto Thin; font-weight: 300; position: absolute;  bottom: 63%; margin-left: 450px;">Cittadinanza <br> e <br> Costituzione</h1>
+
 
 <div class="myDiv">
-    <h2>Educazione civica</h2>
+    <h2 style="color: #37086d;">Educazione civica</h2>
     <p style="font-family: Urbanist; color:indigo; font-size: large;">Il <b>24 giugno 2020</b> il Ministero dell'Istruzione ha inviato a tutte le scuole le linee guida per l'insegnamento di una nuova materia obbligatoria, <b>l'educazione civica</b>. La nuova disciplina in questione vanta, oltre ad <b>un voto proprio</b> in pagella, di ben <b>33 ore obbligatorie</b> e verte su <b>temi di importanza attuale</b>, come l'ambiente. Questo portfolio sarà il <i>"contenitore"</i> di tali argomenti svolti, un posto in cui questi ultimi saranno da me esposti nel miglior modo possibile.</p>
 </div>
 
 <h3>Cos'è un portfolio?</h3>
+<div class="testi">
+    <p style="text-align: left;">Un <strong>portfolio</strong> è una sorta di curriculum, ma molto più <strong>esaustivo</strong> ed in grado di rappresentare una persona in modo decisamente più <strong>approfondito</strong>. Si tratta, in pratica, di una <strong>raccolta dei propri lavori</strong>: viene usato molto nel campo della grafica, della fotografia e simili per presentarsi al meglio ai nuovi visitatori.<br>
+    Io, in questo caso, lo userò per <strong>esporre</strong> anno per anno <strong>tutti i lavori svolti</strong> dalla classe durante Educazione civica.</p>
+</div>
 
 <h3>Facciamo due chiacchere</h3>
+<div class="testi">
+    <p style="text-align: left;"><strong><i>Ciao!</i></strong> Mi chiamo <strong>Simone</strong>, frequento una classe <strong>ITT informatica</strong> e sono appassionato, guarda un po', di informatica e di tutto il campo <strong>tecnologico</strong> in generale.
+    Questo sito è un portfolio diviso in <strong>3 diversi anni scolastici</strong>, a partire dal <em>2020 - 21</em> fino ad arrivare al <em>2022 - 23</em>. In ognuna di queste pagine allegherò, con il passare del tempo, le attività svolte <strong>utili ed inerenti a questo portfolio</strong>. Per aprire le pagine dei diversi anni basta scorrere un po' più in basso e cliccare sugli appositi collegamenti.</p>
+</div>
 
-<h3><a href="www.wikipedia.com">Anno 2020 - 21</a></h3>
+<div class="anni">
+    <h3><br><a style="margin: 88px;" href="#2020-21">Anno 2020 - 21</a>
 
-<h3><a href="www.wikipedia.com">Anno 2021 - 22</a></h3>
+    <a style="margin: 100px;" href="#work-in-progress">Anno 2021 - 22</a>
 
-<h3><a href="www.wikipedia.com">Anno 2022 - 23</a></h3>
+    <a style="margin: 92px;" href="#work-in-progress">Anno 2022 - 23</a></h3>
+</div>
+
+<div class="pic202021">
+    <div class="sidebyside">
+        <img src="2020-21.jpg" alt="Covid 2019">
+    </div>
+    <div class="sidebyside">
+        <img src="ComingSoon.png" alt="Coming Soon!">
+    </div>
+    <div class="sidebyside">
+        <img src="ComingSoon.png" alt="Coming Soon!">
+    </div>
+</div>
 
 <h2>Articoli recenti</h2>
 
