Dummy file for Github Pages

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="0; url=https://bauda.github.io/homepage/homepage.html">
+    <meta http-equiv="refresh" content="0; url=https://bauda.github.io/portfolio/homepage/homepage.html">
 </head>
 
 <body></body>
