Fixed a minor glitch || Now fully responsive

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -43,7 +43,7 @@
 
 <div class="edcivica">
     <h2 style="color: #37086d;">Educazione civica</h2>
-    <p class="text-center" style="font-family: Urbanist; color:indigo; font-size: large; height: 95px;">
+    <p class="text-center" style="font-family: Urbanist; color:indigo; font-size: large; height: auto;">
         Il <b>24 giugno 2020</b> il Ministero dell'Istruzione ha inviato a tutte le scuole le linee guida per l'insegnamento di una nuova materia obbligatoria, <b>l'educazione civica</b>. 
         La nuova disciplina in questione vanta, oltre ad <b>un voto proprio</b> in pagella, di ben <b>33 ore obbligatorie</b> e verte su <b>temi di importanza attuale</b>, come l'ambiente. 
         Questo portfolio sarà il <i>"contenitore"</i> di tali argomenti svolti, un posto in cui questi ultimi saranno da me esposti nel miglior modo possibile.
