--- a/index.html
+++ b/index.html
@@ -1,9 +1,145 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="it">
 <head>
-    <meta http-equiv="refresh" content="0; url=https://bauda.github.io/portfolio/homepage/homepage.html">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+  <!-- Meta tags -->
+  <meta charset="utf-8">
+
+  <!-- responsive viewport meta tag -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- CSS Stylesheet -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Google Fonts embedding -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Glory&family=Josefin+Slab&family=Macondo+Swash+Caps&family=Oswald&family=Roboto&family=Ruthie&family=Urbanist&display=swap" rel="stylesheet"> 
 </head>
 
-<body></body>
+<body>
+
+<div class="wrapper">
+
+  <nav id="sidebar">
+      <!-- Sidebar Header -->
+      <div class="sidebar-header">
+          <h3>Collapsible Sidebar</div>
+      </div>
+
+      <!-- Sidebar Links -->
+      <ul class="list-unstyled components">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><!-- Link with dropdown items -->
+              <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Pages</a>
+              <ul class="collapse list-unstyled" id="homeSubmenu">
+                  <li><a href="#">Page</a></li>
+                  <li><a href="#">Page</a></li>
+                  <li><a href="#">Page</a></li>
+              </ul>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
+      </ul>
+  </nav>
+
+  <div id="content">
+      <button type="button" id="sidebarCollapse" class="navbar-btn">
+          <span></span>
+          <span></span>
+          <span></span>
+      </button>
+  <div>
+
+</div>
+
+<div class="main">
+
+<div class="bg-img">
+  <div class="text-center">
+      <h1 style="color: aliceblue; font-family: Roboto Thin; font-weight: 700;">
+        <b>Cittadinanza <br> e <br> Costituzione</b>
+      </h1>
+  </div>
+</div>
+
+<div class="edcivica">
+  <h2 style="color: #37086d;">Educazione civica</h2>
+  <p class="text-center" style="font-family: Urbanist; color:indigo; font-size: large; height: auto;">
+    Il <b>24 giugno 2020</b> il Ministero dell'Istruzione ha inviato a tutte le scuole le linee guida per l'insegnamento di una nuova materia obbligatoria, <b>l'educazione civica</b>. 
+    La nuova disciplina in questione vanta, oltre ad <b>un voto proprio</b> in pagella, di ben <b>33 ore obbligatorie</b> e verte su <b>temi di importanza attuale</b>, come l'ambiente. 
+    Questo portfolio sarà il <i>"contenitore"</i> di tali argomenti svolti, un posto in cui questi ultimi saranno da me esposti nel miglior modo possibile.
+  </p>
+</div>
+
+<p>
+  <a style="margin-top: 8px;" class="btn btn-dark" data-bs-toggle="collapse" href="#collapsePortfolio" role="button" aria-expanded="false" aria-controls="collapseExample">
+    Cos'è un portfolio?
+  </a>
+</p>
+<div class="collapse" id="collapsePortfolio">
+  <p style="font-size: 13px;" class="card card-body">
+    Un portfolio è una sorta di curriculum, ma molto più esaustivo ed in grado di rappresentare una persona in modo decisamente più approfondito. Si tratta, in pratica, di una raccolta dei propri lavori: viene usato molto nel campo della grafica, della fotografia e simili per presentarsi al meglio ai nuovi visitatori.<br>
+    Io, in questo caso, lo userò per esporre anno per anno tutti i lavori svolti dalla classe durante Educazione civica.</p>
+</div>
+
+<h3>Facciamo due chiacchere</h3>
+<div class="testi">
+  <p class="text-center">
+    <b><i>Ciao!</i></b> Mi chiamo <b>Simone</b>, frequento una classe <b>ITT informatica</b> e sono appassionato, guarda un po', di informatica e di tutto il campo <b>tecnologico</b> in generale.
+    Questo sito è un portfolio diviso in <b>3 diversi anni scolastici</b>, a partire dal <em>2020 - 21</em> fino ad arrivare al <em>2022 - 23</em>. In ognuna di queste pagine allegherò, con il passare del tempo, le attività svolte <b>utili ed inerenti a questo portfolio</b>. 
+    Per aprire le pagine dei diversi anni basta scorrere un po' più in basso e cliccare sugli appositi collegamenti.
+  </p>
+</div>
+
+<div class="container">
+<div class="row">
+  <div class="col">
+    <div class="years">
+      <a style="margin: 155px;" href="../2020-21/2020-21.html">Anno 2020 - 21</a>
+    </div>
+  </div>
+  <div class="col">
+    <div class="years">
+      <a style="margin: 100px;" href="../pages/work-in-progress.html">Anno 2021 - 22</a>
+    </div>
+  </div>
+  <div class="col">
+    <div class="years">
+      <a style="margin: 70px;" href="../pages/work-in-progress.html">Anno 2022 - 23</a>
+    </div>
+  </div>
+
+  <div class="pic202021">
+      <div class="sidebyside">
+        <a href="../2020-21/2020-21.html"><img src="../Images/homepage/2020-21.jpg" alt="Covid 2019"></a>
+      </div>
+      <div class="sidebyside">
+        <a href="../pages/work-in-progress.html"><img src="../Images/homepage/ComingSoon.png" alt="Coming Soon!"></a>
+      </div>
+      <div class="sidebyside">
+        <a href="../pages/work-in-progress.html"><img src="../Images/homepage/ComingSoon.png" alt="Coming Soon!"></a>
+      </div>
+  </div>
+</div>
+</div>
+
+<footer>
+  <p>Questo sito è pensato per essere visualizzato a schermo intero su un computer.</p>
+</footer>
+</div>
+
+<script src="script.js"></script>
+
+<!-- jQuery CDN - Slim version (=without AJAX) -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<!-- Popper.JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+<!-- Bootstrap.JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+</body>
 </html>
